--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -33,9 +33,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
                 android:layout_gravity="center"
+                android:layout_marginTop="10dp"
                 android:src="@drawable/color_table" />
 
             <Button
+                android:layout_marginTop="10dp"
                 android:id="@+id/btnCamera"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
